# ynix-printer-modular

./: .gitignore  README.md  pyproject.toml  run.py
scripts/: install.sh
tests/: test_project_serializer.py  test_qrcode_renderer.py  test_transformations.py  test_tspl.py
thermal_label_app/: __init__.py  __main__.py  app.py  edit_history.py  geometry.py  imaging.py  installer.py  print_queue.py  printing.py  profiles.py  quality.py
thermal_label_app/config/: __init__.py
thermal_label_app/core/: canvas_state.py  document.py  overlays.py  print_service.py  queue_manager.py  transformations.py
thermal_label_app/infrastructure/: __init__.py  cups_adapter.py  tspl_adapter.py
thermal_label_app/printers/contracts/: __init__.py
thermal_label_app/storage/: project_serializer.py
thermal_label_app/ui/: canvas_editor.py  main_window.py  right_panel.py
thermal_label_app/utils/: logger.py
ynix_printer_modular/: __init__.py  __main__.py  app.py  print_queue.py  tspl.py
ynix_printer_modular/config/: settings.py
ynix_printer_modular/core/: __init__.py  document.py  element_modules.py  overlays.py  print_service.py  qrcode_renderer.py  queue_manager.py  transformations.py
ynix_printer_modular/domain/: __init__.py  layer.py  models.py  project.py
ynix_printer_modular/infrastructure/: cups_adapter.py  tspl_adapter.py
ynix_printer_modular/printers/: __init__.py
ynix_printer_modular/storage/: project_serializer.py
ynix_printer_modular/ui/: __init__.py  canvas_editor.py  context_menu.py  left_toolbar.py  main_window.py
(+5 files in other folders)
