[project]
name = "ynix-printer-modular"
version = "1.0.0.0"
description = "Ynix Printer Modular: preview, edição, fila e impressão modular para térmicas e CUPS."
requires-python = ">=3.10"
authors = [
    { name = "CarlosTMJ" },
]
dependencies = [
    "pillow>=10.0",
    "qrcode[pil]>=7.4",
    "tkinterdnd2>=0.4",
]

[project.scripts]
ynix-printer-modular = "ynix_printer_modular.__main__:main"
thermal-label-app = "ynix_printer_modular.__main__:main"

[project.urls]
Author = "https://github.com/carlostmj"

[tool.setuptools.packages.find]
include = ["ynix_printer_modular*"]
